--- a/favorite/src/main/res/layout/favorite_sport_fragment.xml
+++ b/favorite/src/main/res/layout/favorite_sport_fragment.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/first"
     tools:context="com.example.favorite.FavoriteSportFragment">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -16,13 +15,14 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_list_sport" />
 
-
-    <ImageView
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/img_empty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:visibility="gone"
-        android:src="@drawable/ic_baseline_search_24"
+        app:lottie_fileName="sport_box.json"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
         android:contentDescription="@string/lets_looking_for_your_favorite_sport"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
